--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ input {
     background-color: rgb(121, 153, 196);
 }
 .droppable {
+    min-height: 10vh;
     max-height: 20vh;
     overflow-y: scroll;
     border: 1px dashed #000000;
